src/app/modules/newsfeed/activity/remind-button/remind-button.component.ng.scss
@import 'defaults.scss';

:host {
  .m-activityRemindButton__icon {
    padding: 0;
    border: 0;
    appearance: none;
    background: transparent;
    margin: 0;

    &.has-reminded i {
      @include m-theme() {
        color: themed($m-link);
      }
    }

    > * {
      vertical-align: middle;
    }
    .minds-counter {
      padding-right: 0;
    }
  }

  ::ng-deep .m-dropdown--v2 .m-dropdown__list {
    right: unset;
    left: 0;
    top: unset;
    bottom: 10px;
  }
}

